--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
         button:hover {
             background-color: #636363; /* Color más oscuro cuando se pasa el ratón */
         }
+        @media screen and (max-width: 1024px) {
+            .card {
+                width: calc(50% - 40px);
+            }
+        }
+        
+        @media screen and (max-width: 768px) {
+            .card {
+                width: calc(100% - 40px);
+            }
+        }
     </style>
 </head>
 <body>
